update car service
