# server/src/middleware/__generated__/swagger.json
@@ -125,6 +125,43 @@
 						}
 					}
 				]
+			},
+			"put": {
+				"operationId": "UpdateCar",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Vehicle"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "carId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CarCreationParams"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/cars": {
